--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,8 +1,6 @@
 
 name: Autograding Tests
-'on':
-- push
-- repository_dispatch
+on: [push, workflow_dispatch]
 permissions:
   checks: write
   actions: read
